--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Hello world!</h1>
-    <script src="./xuni/bundle.js"></script>
+    <!-- webpack 配置多个entry时, 修改输出的js名称来调式不同的入口文件, first.js/second.js -->
+    <script src="./xuni/second.js"></script>
 </body>
 </html>
