--- a/src/AST抽象语法树/深入递归.html
+++ b/src/AST抽象语法树/深入递归.html
@@ -49,7 +49,7 @@
     /**
      * 斐波那契数列
      **/
-    const fb = (n, a1 = 1, a2 = 1) => { return n <= 1 ? a1: fb(n - 1, a2, a1 + a2) };
+    const fb = (n, a1 = 1, a2 = 1) => n <= 1 ? a1: fb(n - 1, a2, a1 + a2);
 
   </script>
 </body>
