--- a/www/index.html
+++ b/www/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="btn">点击添加</button>
+    <!-- <button id="btn">点击添加</button> -->
     <div id="container"></div>
-    <!-- webpack 配置多个entry时, 修改输出的js名称来调式不同的入口文件, first.js/second.js -->
-    <script src="./xuni/first.js"></script>
+    <!-- webpack 配置多个entry时, 修改输出的js名称来调式不同的入口文件, first.js/second.js/third.js -->
+    <script src="./xuni/third.js"></script>
 </body>
 </html>
