--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <div id="app">
-        <h3 class="title">你好 {{ a }}</h3>
+        你好 {{ a }}
+        <h3 class="title"></h3>
         <ul>
             <li>A</li>
             <li>B</li>
