--- a/www/index.html
+++ b/www/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <div id="app">
-        你好 {{ b.m.n }}
+        你好 {{ a }}
         <br />
-        <input type="text" v-model="b.m.n">
+        <input type="text" v-model="a">
         <!-- <h3 class="title"></h3>
         <ul>
             <li>A</li>
