01-06的合集开发环境基本配置

--- a/src/webpack/07.开发环境基本配置/src/index.html
+++ b/src/webpack/07.开发环境基本配置/src/index.html
@@ -14,5 +14,11 @@
     <span class="iconfont icon-bianji"></span>
     <span class="iconfont icon-Dyanjing"></span>
   </div>
+  <div class="img-warap">  
+    <div class="box1"></div>
+    <div class="box2"></div>
+    <div class="box3"></div>
+    <img src="./img/1.jpg" alt="" />
+  </div>
 </body>
 </html>
