--- a/src/webpack/07.开发环境基本配置/src/index.html
+++ b/src/webpack/07.开发环境基本配置/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>开发环境配置</title>
+  <title>开发环境配置~~~</title>
 </head>
 <body>
   <h3 id="title">Hello Webpack</h3>
