--- a/src/自定义工具库/event-bus/事件总线.html
+++ b/src/自定义工具库/event-bus/事件总线.html
@@ -18,9 +18,16 @@
       console.log(data, '登录数据已经写入');
     })
 
+    eventBus.on('logout', data => {
+      console.log(data, '退出登录');
+    })
+
     setTimeout(() => {
       eventBus.emit('login', '张三')
-    }， 2000)
+    }, 2000)
+
+    eventBus.off('login')
+    console.log(eventBus);
   </script>
 </body>
 </html>
