--- a/src/自定义工具库/消息订阅与发布/消息订阅与发布.html
+++ b/src/自定义工具库/消息订阅与发布/消息订阅与发布.html
@@ -22,7 +22,8 @@
       console.log('商家接到了用户取消订单的请求');
     })
 
-    PubSub.unsubscribe(pid);
+    // PubSub.unsubscribe(pid);
+    // PubSub.unsubscribe('pay');
 
     console.log(PubSub);
     PubSub.publish('pay', {
