--- a/src/自定义工具库/publish/test/test_promise.html
+++ b/src/自定义工具库/publish/test/test_promise.html
@@ -9,12 +9,12 @@
 </head>
 <body>
   <script>
-    console.log(yxutils);
+    // console.log(yxutils);
 
     const { Promise } = yxutils;
     const { SingleInstance } = yxutils;
 
-    console.log(Promise);
+    // console.log(Promise);
 
     const s1 = SingleInstance.getInstance();
     const s2 = SingleInstance.getInstance();
