--- a/src/自定义工具库/publish/test/test_array.html
+++ b/src/自定义工具库/publish/test/test_array.html
@@ -9,13 +9,47 @@
 </head>
 <body>
   <script>
-    const { map } = yxutils;
-    // 测试
+    const { map, reduce } = yxutils;
     const arr = [1,2,3,4];
+    const logStyle = 'color: #A23598; font-style: italic';
+
+
+    /*  test map  */
+    console.group('Test Array Function: map');
     const result = map(arr, (item) => {
       return item * 10;
     })
+    console.log(`%cconst result = map(arr, (item) => {
+      return item * 10;
+    })`, logStyle);
     console.log(result);
+    console.groupEnd();
+
+
+    /*  test reduce  */
+    console.group('Test Array Function: reduce');
+    const result1 = reduce(arr, function(res, value) {
+      return res + value
+    }, 0)
+    console.log(`%cconst result1 = reduce(arr, function(res, value) {
+  return res + value
+}, 0)`, logStyle);
+    console.log(result1);
+    console.groupEnd();
+
+    // testLog('reduce', () => {
+    //   return reduce(arr, function(res, value) {
+    //     return res + value
+    //   }, 0);
+    // })
+
+    // const testLog = (name, fn) => {
+    //   console.group(`Test Array Function: ${name}`);
+    //   console.log('%c' + fn.tostring(), logStyle);
+    //   const result = fn();
+    //   console.log('result:', result);
+    //   console.groupEnd();
+    // }
   </script>
 </body>
 </html>
