--- a/src/自定义工具库/publish/test/test_array.html
+++ b/src/自定义工具库/publish/test/test_array.html
@@ -13,7 +13,7 @@
     const { map, reduce, filter, find, findIndex, every, some } = yxutils;
     // 数组去重方法
     const { unique, unique2, unique3 } = yxutils;
-    const { concat, slice, flat, flat2, chunk } = yxutils;
+    const { concat, slice, flat, flat2, chunk, difference, difference2 } = yxutils;
     const arr = [1,2,3,4];
 
 
@@ -98,6 +98,14 @@
     testLog('chunk', () => {
       const arrchunk = [1,3,5,7,9,11,13,15];
       return chunk(arrchunk, 3);
+    })
+
+
+    testLog('difference', () => {
+      return difference([1,3,5,7], [5, 8]);
+    })
+    testLog('difference2', () => {
+      return difference2([1,3,5,7], [5, 8]);
     })
 
     </script>
