--- a/src/自定义工具库/publish/test/test_event_bind.html
+++ b/src/自定义工具库/publish/test/test_event_bind.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>事件委托测试</title>
-  <script src="./index.js"></script>
+  <script src="../dist/yaoxin-utils.js"></script>
 </head>
 <body>
   <div class="outer" style="padding: 20px;">
@@ -19,6 +19,7 @@
   </div>
 
   <script>
+    const { addEventListener } = yxutils;
     addEventListener('#items', 'click', function(e) {
       console.log(this.innerHTML);
     }, 'li')
