--- a/src/自定义工具库/publish/test/test_pub_sub.html
+++ b/src/自定义工具库/publish/test/test_pub_sub.html
@@ -5,11 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>消息订阅与发布</title>
-  <script src="./index.js"></script>
+  <script src="../dist/yaoxin-utils.js"></script>
 </head>
 <body>
   <script>
-
+    const { PubSub } = yxutils;
     let pid = PubSub.subscribe('pay', data => {
       console.log('商家接到了订单，准备开始制作');
     })
@@ -21,8 +21,9 @@
     PubSub.subscribe('cancel', data => {
       console.log('商家接到了用户取消订单的请求');
     })
-
-    // PubSub.unsubscribe(pid);
+    
+    
+    //PubSub.unsubscribe(pid);
     // PubSub.unsubscribe('pay');
 
     console.log(PubSub);
@@ -31,6 +32,7 @@
       price: 30,
       pos: '前门大街200号'
     })
+    PubSub.publish('cancel', {})
 
   </script>
 </body>
