--- a/src/自定义工具库/publish/test/test_promise.html
+++ b/src/自定义工具库/publish/test/test_promise.html
@@ -9,17 +9,15 @@
 </head>
 <body>
   <script>
-    // console.log(yxutils);
-
     const { Promise } = yxutils;
     const { SingleInstance } = yxutils;
 
     // console.log(Promise);
 
-    const s1 = SingleInstance.getInstance();
-    const s2 = SingleInstance.getInstance();
+    // const s1 = SingleInstance.getInstance();
+    // const s2 = SingleInstance.getInstance();
+    // console.log('SingleInstance', s1 === s2);
 
-    console.log('SingleInstance', s1 === s2);
   </script>
 </body>
 </html>
